// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test-cap-server feature-service state response no change 1`] = `
{
  "/fts/check-service-extension": {
    "config": {
      "SOURCE": "AUTO",
      "TYPE": "boolean",
    },
    "fallbackValue": false,
  },
  "/test/feature_a": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "boolean",
    },
    "fallbackValue": false,
  },
  "/test/feature_b": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "number",
    },
    "fallbackValue": 1,
  },
}
`;

exports[`test-cap-server feature-service state response with changes 1`] = `
{
  "/fts/check-service-extension": {
    "config": {
      "SOURCE": "AUTO",
      "TYPE": "boolean",
    },
    "fallbackValue": false,
  },
  "/test/feature_a": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "boolean",
    },
    "fallbackValue": false,
  },
  "/test/feature_b": {
    "config": {
      "SOURCE": "RUNTIME",
      "TYPE": "number",
    },
    "fallbackValue": 1,
    "rootValue": 2,
    "scopedValues": {
      "tenant::a": 20,
      "tenant::b": 30,
    },
  },
}
`;
